# handwrite-software

./: .gitignore  README.md  first.gcode  idea.txt  index.html  main.ts  package-lock.json  package.json  preload.js  tsconfig.json  vite.config.ts
.github/workflows/: fonter-web-pages.yml
fonter/cachy/: CMakeLists.txt
fonter/cachy/qml/: Main.qml
fonter/cachy/src/app/: AppController.cpp
fonter/cachy/src/canvas/: CanvasItem.cpp  CanvasItem.h
fonter/cachy/src/core/: EditorStore.cpp  EditorStore.h  EditorTypes.h
fonter/cachy/src/services/: ExportService.cpp  ExportService.h  FileService.h  ProjectService.cpp
fonter/qml/: Main.qml
fonter/src/app/: AppController.cpp  AppController.h
fonter/src/canvas/: CanvasItem.cpp  CanvasItem.h
fonter/src/core/: EditorStore.cpp  EditorStore.h  EditorTypes.h
fonter/src/services/: ExportService.cpp  ExportService.h  FileService.cpp  ProjectService.cpp  ProjectService.h
fonter/web/: package-lock.json  package.json  vite.config.ts
fonter/web/src/: App.css  App.tsx  index.css
fonter/web/src/components/: BoardCanvas.tsx
fonter/web/src/logic/: appActions.ts  canvasDraw.ts  canvasPointer.ts  editorStore.test.ts  editorStore.ts  editorTypes.ts  exportService.test.ts  exportService.ts  fontGenerator.ts  projectService.test.ts  projectService.ts
grbl-servo-servo-on-z-axis/: .gitignore  platformio.ini
grbl-servo-servo-on-z-axis/grbl/: config.h  cpu_map.h  grbl.h  spindle_control.c  spindle_control.h  stepper.c
linux/: CMakeLists.txt  main.cpp
linux/qml/: Main.qml
linux/src/app/: AppController.cpp  AppController.h
linux/src/canvas/: CanvasItem.cpp  CanvasItem.h
linux/src/core/: EditorStore.cpp  EditorStore.h  EditorTypes.h
linux/src/services/: ExportService.cpp  ExportService.h  FileService.cpp  FileService.h
scripts/: dev.mjs  start-electron.mjs
src/: App.css  App.tsx  index.css  main.tsx
src/components/ImageCanvas/: ImageCanvas.css  ImageCanvas.tsx
src/components/TitleBar/: TitleBar.css  TitleBar.tsx
src/components/TopMenuBar/: TopMenuBar.css  TopMenuBar.tsx
src/context/: index.ts  store.ts  types.ts
src/main/: ipcHandlers.ts  windowManager.ts
src/types/: electron.d.ts
src/utils/: exportSelection.ts  imageProcessing.ts  logger.ts  units.ts
writer/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp
writer/build-test/: CMakeCache.txt  Makefile  WriterQt  cmake_install.cmake
writer/build-test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
writer/build-test/.qt/deploy_qml_imports/: WriterQt.cmake
writer/build-test/.qt/qml_imports/: WriterQt_build.cmake  WriterQt_build.rsp  WriterQt_conf.rsp
writer/build-test/.qt/rcc/: qml_resources.qrc  qrc_qml_resources.cpp
writer/build-test/WriterQt_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
writer/build-test/WriterQt_autogen/BP327GEKJA/: moc_GcodeController.cpp  moc_GcodeController.cpp.d
writer/build-test/WriterQt_autogen/ISMKEKEPX5/: moc_AppSettings.cpp  moc_AppSettings.cpp.d  moc_DocumentModel.cpp  moc_DocumentModel.cpp.d  moc_WriterController.cpp  moc_WriterController.cpp.d
writer/build-test/WriterQt_autogen/W2KOGDY5AQ/: moc_GrblConnection.cpp  moc_GrblConnection.cpp.d
writer/build-test/WriterQt_autogen/YPKJ5OE7LN/: moc_HandwritingCanvasItem.cpp  moc_HandwritingCanvasItem.cpp.d
writer/qml/: Main.qml
writer/src/app/: AppSettings.cpp  AppSettings.h  DocumentModel.cpp  DocumentModel.h  WriterController.cpp  WriterController.h
writer/src/cnc/: GrblConnection.cpp  GrblConnection.h  SerialPortScan.cpp  SerialPortScan.h
writer/src/font/: FontLoader.cpp  FontLoader.h
writer/src/gcode/: GcodeController.cpp  GcodeController.h  GcodeGenerator.cpp  GcodeGenerator.h  PathBuilder.cpp  PathBuilder.h
writer/src/layout/: LayoutEngine.cpp  LayoutEngine.h
writer/src/services/: WriterProjectService.cpp  WriterProjectService.h
writer/src/ui/: HandwritingCanvasItem.cpp  HandwritingCanvasItem.h
